added salary module and updated bootstrap5

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <header>
   <div class="card">
     <div class="card-header">
-      <h2 [style.color]="'gray'" [style.text-align]="'center'"> {{title + " is running"}} </h2>
+      <h4 class="pt-2" [style.color]="'blue'" [style.text-align]="'center'"> {{title}} </h4>
     </div>
+  </div>
+  <div>
+    <app-tax></app-tax>
   </div>
 </header>
