--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<header>
-  <div class="card">
-    <div class="card-header">
-      <h4 class="pt-2" [style.color]="'blue'" [style.text-align]="'center'"> {{title}} </h4>
-    </div>
-  </div>
-  <div>
-    <app-tax></app-tax>
-  </div>
-</header>
+<nav class="navbar navbar-expand navbar-light bg-primary">
+  <h2 style="margin-left: 2cm;"><a class="navbar-brand text-white"> {{title}}</a></h2>
+  <ul class="nav nav-pills">
+    <li style="margin-left: 0.3cm;"> <a class="nav-link text-white" routerLink="/salary-record"> Salary Record </a> </li>
+    <li style="margin-left: 0.3cm;"> <a class="nav-link text-white" routerLink="/salary-list"> Salary List </a> </li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
+    
+  
