--- a/src/app/salary/salary-list/salary-list.component.html
+++ b/src/app/salary/salary-list/salary-list.component.html
@@ -6,26 +6,39 @@
         <div class="card-body">
             <table class="table mt-2">
                 <thead class="text-primary">
-                    <th>User Id</th>
-                    <th>Company Name</th>
-                    <th>Amount</th>
-                    <th>Currency</th>
-                    <th>Tax Period</th>
-                    <th>Date</th>
+                    <tr>
+                        <th>Record Id</th>
+                        <th>Company Name</th>
+                        <th>Amount</th>
+                        <th>Currency</th>
+                        <th>Tax Period</th>
+                        <th>Date</th>
+                    </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let d of data.getTestData(123)">
-                        <td> {{d.userId}} </td>
+                    <div *ngIf="default">
+                        <!--display default data then if false, display new data-->
+                    </div>
+                    <tr *ngFor="let d of data.getTestData(123)" (click)="showDetail(d.id)">
+                        <td> {{d.id}} </td>
                         <td> {{d.companyName}} </td>
-                        <td> {{d.amount}} </td>
+                        <td> {{d.amount | currency: d.currency: 'symbol-narrow': '1.2-2'}} </td>
                         <td> {{d.currency}} </td>
                         <td> {{d.exactPeriod}} </td>
-                        <td *ngIf="d.exactPeriod.includes('Year')"> {{d.taxYear!.year}} </td>
-                        <td *ngIf="d.exactPeriod.includes('Month')"> {{d.taxMonth!.month}} </td>
-                        <td *ngIf="d.exactPeriod.includes('Date')"> {{d.taxDate!.day+'-'+d.taxDate!.month+'-'+d.taxDate!.year}} </td>
-                    </tr>
+                        <td> {{d | datePipe}} </td>
+                    </tr>    
                 </tbody>
             </table>
+            <app-salary-detail *ngIf="show" 
+                                [id]="id"
+                                [company]="company"
+                                [amount]="amount"
+                                [currency]="currency"
+                                [taxPeriod]="taxPeriod"
+                                [date]="date"
+                                                            
+            >
+            </app-salary-detail>
         </div>
     </div>
 </div>
