fixed and updated

--- a/src/app/salary/salary-list/salary-list.component.html
+++ b/src/app/salary/salary-list/salary-list.component.html
@@ -43,7 +43,7 @@
                                 [currency]="currency"
                                 [taxPeriod]="taxPeriod"
                                 [date]="date"
-                                (deletedChild)="deleteRecord($event.toString())"
+                                (notify)="deleteRecord($event)"
             >
             </app-salary-detail>
         </div>
