--- a/src/app/salary/salary-detail/salary-detail.component.html
+++ b/src/app/salary/salary-detail/salary-detail.component.html
@@ -2,22 +2,22 @@
     <div class="card-header"> Salary Detail </div>
     <div class="card-body">
         <div class="row">
-            <div class="col"> Id: {{id}} </div> 
+            <div class="col"> Id: {{salary.id}} </div> 
         </div>
         <div class="row">
-            <div calss="col"> Company: {{company}} </div>
+            <div calss="col"> Company: {{salary.companyName}} </div>
         </div>
         <div class="row">
-            <div calss="col"> Amount: {{amount | currency: currency: 'symbol-narrow'}} </div>
+            <div calss="col"> Amount: {{salary.amount | currency: salary.currency: 'symbol-narrow'}} </div>
         </div>
         <div class="row">
-            <div calss="col"> Currency: {{currency}} </div>
+            <div calss="col"> Currency: {{salary.currency}} </div>
         </div>
         <div class="row">
-            <div calss="col"> Tax Period: {{taxPeriod}} </div>
+            <div calss="col"> Tax Period: {{salary.exactPeriod}} </div>
         </div>
         <div class="row">
-            <div calss="col"> Date: {{date | datePipe}} </div>
+            <div calss="col"> Date: {{salary | datePipe}} </div>
         </div>
         <div class="row mt-3">
             <div class="col-3" (click)="deletedChild()">
