added salary-add-edit component

--- a/src/app/salary/salary-list/salary-list.component.html
+++ b/src/app/salary/salary-list/salary-list.component.html
@@ -13,6 +13,7 @@
                         <th>Currency</th>
                         <th>Tax Period</th>
                         <th>Date</th>
+                        <th> <button class="btn btn-primary" routerLink="/salary-record"> Create New </button> </th>
                     </tr>
                 </thead>
                 <tbody *ngIf="!default">
