--- a/src/app/salary/salary-add-edit/salary-add-edit.component.html
+++ b/src/app/salary/salary-add-edit/salary-add-edit.component.html
@@ -19,7 +19,11 @@
                     formControlName="company"
                     [ngClass]="{'is-invalid': (clientForm.get('company')!.touched || clientForm.get('company')!.dirty) && !clientForm.get('company')!.valid}"
                     >
+                    <span class="invalid-feedback"> 
+                        <span *ngIf="{'is-invalid': clientForm.get('company')?.errors}"> Only a maximum of 100 characters allowed  </span>
+                    </span>
                 </div>
+                
             </div>
             <br/>
             <div class="row">
@@ -32,6 +36,9 @@
                     formControlName="amount"
                     [ngClass]="{'is-invalid': (clientForm.get('amount')!.touched || clientForm.get('amount')!.dirty) && !clientForm.get('amount')!.valid}"
                     >
+                    <span class="invalid-feedback"> 
+                        <span *ngIf="{'is-invalid': clientForm.get('amount')?.errors}"> Please enter salary between 0.01 and 1000000 </span>
+                    </span>
                 </div>
                 <div class="col">
                     <p class="h6">CURRENCY</p>
@@ -43,6 +50,9 @@
                     <option></option>
                     <option *ngFor="let c of formData.currency"> {{ c }} </option>
                     </select>
+                    <span class="invalid-feedback"> 
+                        <span *ngIf="{'is-invalid': clientForm.get('currency')?.errors}"> Please select a currency </span>
+                    </span>
                 </div>
             </div>
             <br/>
@@ -51,12 +61,16 @@
                     <p class="h6">DATE PAID</p>
                     <select 
                     class="form-select form-select-lg" 
-                    formControlName="selectOption" 
+                    formControlName="selectOption"
+                    [ngClass]="{'is-invalid': (clientForm.get('selectOption')!.touched || clientForm.get('selectOption')!.dirty) && !clientForm.get('selectOption')!.valid}" 
                     >
                     <option> Enter for full Tax Year </option>
                     <option> Enter per Month </option>
                     <option> Enter per Specific Date</option>
                     </select>
+                    <span class="invalid-feedback"> 
+                        <span *ngIf="{'is-invalid': clientForm.get('selectOption')?.errors}"> Please enter the tax period </span>
+                    </span>
                 </div>
             </div>
             <br/>
@@ -69,10 +83,14 @@
                                 <select 
                                 class="form-select form-select-lg" 
                                 formControlName="selectYear"
+                                [ngClass]="{'is-invalid': (year.get('selectYear')!.touched || year.get('selectYear')!.dirty) && !year.get('selectYear')!.valid}"
                                 >
                                 <option></option>
                                 <option *ngFor="let x of formData.listYear"> Total for {{ x }} Tax Year </option>
                                 </select>
+                                <span class="invalid-feedback"> 
+                                    <span *ngIf="{'is-invalid': year.get('selectYear')?.errors}"> Please enter the tax Year </span>
+                                </span>
                             </div>
                         </div>
                         <br/>
@@ -92,17 +110,21 @@
                                 <select 
                                 class="form-select form-select-lg" 
                                 formControlName="selectMonth"
+                                [ngClass]="{'is-invalid': (m.get('selectMonth')!.touched || m.get('selectMonth')!.dirty) && !m.get('selectMonth')!.valid}"
                                 >
                                 <option></option>
                                 <option *ngFor="let x of formData.listMonth"> Total for {{ x }} </option>
                                 </select>
+                                <span class="invalid-feedback"> 
+                                    <span *ngIf="{'is-invalid': m.get('selectMonth')?.errors}"> Please enter the tax Month </span>
+                                </span>
                             </div>
                         </div>
                         <br/>
                     </div>
                 </div>
                 <div class="col" style="margin-top: 0.8cm;">
-                    <button class="btn btn-primary" (click)="duplicateFields2()">Select another Month</button>
+                    <button [disabled]="!addedMonths.valid" class="btn btn-primary" (click)="duplicateFields2()">Select another Month</button>
                 </div>
             </div>
             <br/>
@@ -110,34 +132,46 @@
                 <div class="col">
                     <div formArrayName="selectDate" *ngFor="let d of addedDate.controls; let i=index">
                         <div [formGroupName]="i">
-                            <p class="h6">SELECT DATE</p>
+                            <p class="h6">SELECT DATE </p>
                             <div class="row">
                                 <div class="col">
                                     <select 
                                     class="form-select form-select-lg" 
                                     formControlName="day"
+                                    [ngClass]="{'is-invalid': (d.get('day') || d.get('day')!.dirty) && !d.get('day')!.valid}"
                                     >
                                     <option></option>
                                     <option *ngFor="let x of formData.daylist"> {{ x }} </option>
                                     </select>
+                                    <span class="invalid-feedback"> 
+                                        <span *ngIf="{'is-invalid': d.get('day')?.errors?.required}"> Please enter the day </span>
+                                    </span>
                                 </div>
                                 <div class="col">
                                     <select 
                                     class="form-select form-select-lg" 
                                     formControlName="month"
+                                    [ngClass]="{'is-invalid': (d.get('month') || d.get('month')!.dirty) && !d.get('month')!.valid}"
                                     >
                                     <option></option>
                                     <option *ngFor="let x of formData.months"> {{ x }} </option>
                                     </select>
+                                    <span class="invalid-feedback"> 
+                                        <span *ngIf="{'is-invalid': d.get('month')?.errors?.required}"> Please enter the month </span>
+                                    </span>
                                 </div>
                                 <div class="col">
                                     <select 
                                     class="form-select form-select-lg" 
                                     formControlName="year"
+                                    [ngClass]="{'is-invalid': (d.get('year') || d.get('year')!.dirty) && !d.get('year')!.valid}"
                                     >
                                     <option></option>
                                     <option *ngFor="let x of formData.years"> 20{{ x }} </option>
                                     </select>
+                                    <span class="invalid-feedback"> 
+                                        <span *ngIf="{'is-invalid': d.get('year')?.errors?.required}"> Please enter the year </span>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -145,7 +179,7 @@
                     </div>
                 </div>
                 <div class="col" style="margin-top: 0.8cm;">
-                    <button class="btn btn-primary" (click)="duplicateFields3()">Add another Date</button>
+                    <button [disabled]="!addedDate.valid" class="btn btn-primary" (click)="duplicateFields3()">Add another Date</button>
                 </div>
             </div>
             <button class="btn btn-primary"> SUBMIT </button>
