--- a/src/app/salary/salary-add-edit/salary-add-edit.component.html
+++ b/src/app/salary/salary-add-edit/salary-add-edit.component.html
@@ -20,7 +20,9 @@
                     [ngClass]="{'is-invalid': (clientForm.get('company')!.touched || clientForm.get('company')!.dirty) && !clientForm.get('company')!.valid}"
                     >
                     <span class="invalid-feedback"> 
-                        <span *ngIf="{'is-invalid': clientForm.get('company')?.errors}"> Only a maximum of 100 characters allowed  </span>
+                        <span *ngIf="clientForm.get('company')?.errors?.required"> Please enter Company Name  </span>
+                        <span *ngIf="clientForm.get('company')?.errors?.minLength"> Only a minimum of 2 characters allowed </span>
+                        <span *ngIf="clientForm.get('company')?.errors?.maxLength"> Only a maximum of 100 characters allowed  </span>
                     </span>
                 </div>
                 
@@ -37,7 +39,9 @@
                     [ngClass]="{'is-invalid': (clientForm.get('amount')!.touched || clientForm.get('amount')!.dirty) && !clientForm.get('amount')!.valid}"
                     >
                     <span class="invalid-feedback"> 
-                        <span *ngIf="{'is-invalid': clientForm.get('amount')?.errors}"> Please enter salary between 0.01 and 1000000 </span>
+                        <span *ngIf="clientForm.get('amount')?.errors?.required"> Please enter salary </span>
+                        <span *ngIf="clientForm.get('amount')?.errors?.min"> Minimum salary should be at least 0.01</span>
+                        <span *ngIf="clientForm.get('amount')?.errors?.max"> Maximum salary should be up to 1000000 </span>
                     </span>
                 </div>
                 <div class="col">
@@ -51,7 +55,7 @@
                     <option *ngFor="let c of formData.currency"> {{ c }} </option>
                     </select>
                     <span class="invalid-feedback"> 
-                        <span *ngIf="{'is-invalid': clientForm.get('currency')?.errors}"> Please select a currency </span>
+                        <span *ngIf="clientForm.get('currency')?.errors?.required"> Please select a currency </span>
                     </span>
                 </div>
             </div>
@@ -69,7 +73,7 @@
                     <option> Enter per Specific Date</option>
                     </select>
                     <span class="invalid-feedback"> 
-                        <span *ngIf="{'is-invalid': clientForm.get('selectOption')?.errors}"> Please enter the tax period </span>
+                        <span *ngIf="clientForm.get('selectOption')?.errors?.required"> Please enter the tax period </span>
                     </span>
                 </div>
             </div>
@@ -89,7 +93,7 @@
                                 <option *ngFor="let x of formData.listYear"> Total for {{ x }} Tax Year </option>
                                 </select>
                                 <span class="invalid-feedback"> 
-                                    <span *ngIf="{'is-invalid': year.get('selectYear')?.errors}"> Please enter the tax Year </span>
+                                    <span *ngIf="year.get('selectYear')?.errors?.required"> Please enter the tax Year </span>
                                 </span>
                             </div>
                         </div>
@@ -116,7 +120,7 @@
                                 <option *ngFor="let x of formData.listMonth"> Total for {{ x }} </option>
                                 </select>
                                 <span class="invalid-feedback"> 
-                                    <span *ngIf="{'is-invalid': m.get('selectMonth')?.errors}"> Please enter the tax Month </span>
+                                    <span *ngIf="m.get('selectMonth')?.errors?.required"> Please enter the tax Month </span>
                                 </span>
                             </div>
                         </div>
@@ -144,7 +148,7 @@
                                     <option *ngFor="let x of formData.daylist"> {{ x }} </option>
                                     </select>
                                     <span class="invalid-feedback"> 
-                                        <span *ngIf="{'is-invalid': d.get('day')?.errors?.required}"> Please enter the day </span>
+                                        <span *ngIf="d.get('day')?.errors?.required"> Please enter the day </span>
                                     </span>
                                 </div>
                                 <div class="col">
@@ -157,7 +161,7 @@
                                     <option *ngFor="let x of formData.months"> {{ x }} </option>
                                     </select>
                                     <span class="invalid-feedback"> 
-                                        <span *ngIf="{'is-invalid': d.get('month')?.errors?.required}"> Please enter the month </span>
+                                        <span *ngIf="d.get('month')?.errors?.required"> Please enter the month </span>
                                     </span>
                                 </div>
                                 <div class="col">
@@ -170,7 +174,7 @@
                                     <option *ngFor="let x of formData.years"> 20{{ x }} </option>
                                     </select>
                                     <span class="invalid-feedback"> 
-                                        <span *ngIf="{'is-invalid': d.get('year')?.errors?.required}"> Please enter the year </span>
+                                        <span *ngIf="d.get('year')?.errors?.required"> Please enter the year </span>
                                     </span>
                                 </div>
                             </div>
