--- a/src/app/salary/salary-detail/salary-detail.component.html
+++ b/src/app/salary/salary-detail/salary-detail.component.html
@@ -24,7 +24,7 @@
                 <button class="btn btn-danger"> Delete </button>
             </div>
             <div class="col-3">
-                <button class="btn btn-primary" routerLink="/salary-record"> Edit </button>
+                <button class="btn btn-primary" [routerLink]="['/salary-record', salary.id]"> Edit </button>
             </div>
         </div>
     </div>
