--- a/src/app/salary/salary-add-edit/salary-add-edit.component.html
+++ b/src/app/salary/salary-add-edit/salary-add-edit.component.html
@@ -1,28 +1,29 @@
 <div class="container w-50 mt-5">
     <div class="card">
         <div class="card-header">
-            {{ editData.id > 0 ? 'EDIT SALARY RECORD' : 'ADD SALARY RECORD ' }}
+            {{ formLabel }}
         </div>
         <div class="card-body mt-2">
             <form 
             novalidate 
             [formGroup]="clientForm"
+            (ngSubmit)="editData.id > 0 ? addEditRecord(editData.id.toString()) : addNewRecord()"
             >
             <div class="row">
                 <div class="col">
                     <p class="h6">COMPANY</p>
                     <input 
                     class="form-control form-control-lg" 
-                    type="text" 
+                    type="text"
                     placeholder="Enter Company Name"
-                    value = "life is good"
                     formControlName="company"
-                    [ngClass]="{'is-invalid': (clientForm.get('company')!.touched || clientForm.get('company')!.dirty) && !clientForm.get('company')!.valid}"
+                    [ngClass]="{'is-invalid': (clientForm.get('company')!.touched || clientForm.get('company')!.dirty) && clientForm.get('company')!.invalid}"
                     >
-                    <span class="invalid-feedback"> 
+                    <span class="invalid-feedback">
                         <span *ngIf="clientForm.get('company')?.errors?.required"> Please enter Company Name  </span>
-                        <span *ngIf="clientForm.get('company')?.errors?.minLength"> Only a minimum of 2 characters allowed </span>
-                        <span *ngIf="clientForm.get('company')?.errors?.maxLength"> Only a maximum of 100 characters allowed  </span>
+                        <span *ngIf="clientForm.get('company')?.errors?.minlength"> Only a minimum of 2 characters allowed </span>
+                        <span *ngIf="clientForm.get('company')?.errors?.maxlength"> Only a maximum of 100 characters allowed  </span>
+                        <span *ngIf="clientForm.get('company')?.errors?.pattern"> Starting with spaces is not allowed </span>
                     </span>
                 </div>
                 
@@ -33,7 +34,7 @@
                     <p class="h6">AMOUNT</p>
                     <input 
                     class="form-control form-control-lg" 
-                    type="text" 
+                    type="number" 
                     placeholder="Enter salary Amount"
                     formControlName="amount"
                     [ngClass]="{'is-invalid': (clientForm.get('amount')!.touched || clientForm.get('amount')!.dirty) && !clientForm.get('amount')!.valid}"
@@ -66,6 +67,7 @@
                     <select 
                     class="form-select form-select-lg" 
                     formControlName="selectOption"
+                    (change)="checkValidity()"
                     [ngClass]="{'is-invalid': (clientForm.get('selectOption')!.touched || clientForm.get('selectOption')!.dirty) && !clientForm.get('selectOption')!.valid}" 
                     >
                     <option [defaultSelected]="true" [value]="editData.exactPeriod"> {{editData.exactPeriod}} </option>
@@ -79,113 +81,98 @@
             <br/>
             <div class="row mt-2" *ngIf="clientForm.get('selectOption')!.value.includes('Year')">
                 <div class="col">
-                    <div formArrayName="selectYear" *ngFor="let year of addedYears.controls; let i=index">
-                        <div [formGroupName]="i">
-                            <p class="h6">SELECT YEAR</p>
-                            <div class="col">
-                                <select 
-                                class="form-select form-select-lg" 
-                                formControlName="selectYear"
-                                [ngClass]="{'is-invalid': (year.get('selectYear')!.touched || year.get('selectYear')!.dirty) && !year.get('selectYear')!.valid}"
-                                >
-                                <option [defaultSelected]="true" [value]="editData.taxYear?.year"> {{editData.taxYear?.year}} </option>
-                                <option *ngFor="let x of formData.listYear"> Total for {{ x }} Tax Year </option>
-                                </select>
-                                <span class="invalid-feedback"> 
-                                    <span *ngIf="year.get('selectYear')?.errors?.required"> Please enter the tax Year </span>
-                                </span>
-                            </div>
-                        </div>
+                    <p class="h6">SELECT YEAR</p>
+                    <div class="col">
+                        <select 
+                        class="form-select form-select-lg" 
+                        formControlName="selectYear"
+                        [ngClass]="{'is-invalid': (clientForm.get('selectYear')!.touched || clientForm.get('selectYear')!.dirty) && !clientForm.get('selectYear')!.valid}"
+                        >
+                        <option [defaultSelected]="true" [value]="editData.taxYear?.year"> {{editData.taxYear?.year}} </option>
+                        <option *ngFor="let x of formData.listYear"> Total for {{ x }} Tax Year </option>
+                        </select>
+                        <span class="invalid-feedback"> 
+                            <span *ngIf="clientForm.get('selectYear')?.errors?.required"> Please enter the tax Year </span>
+                        </span>
                         <br/>
                     </div>
-                </div>
-                <div class="col" style="margin-top: 0.8cm;">
-                    <button [disabled]="!addedYears.valid" class="btn btn-primary" (click)="duplicateFields1()">Select another Year</button>
                 </div>
             </div>
             <br/>
             <div class="row month" *ngIf="clientForm.get('selectOption')!.value.includes('Month')">
                 <div class="col">
-                    <div formArrayName="selectMonth" *ngFor="let m of addedMonths.controls; let i=index">
-                        <div [formGroupName]="i">
-                            <p class="h6">SELECT MONTH</p>
-                            <div class="col">
-                                <select 
-                                class="form-select form-select-lg" 
-                                formControlName="selectMonth"
-                                [ngClass]="{'is-invalid': (m.get('selectMonth')!.touched || m.get('selectMonth')!.dirty) && !m.get('selectMonth')!.valid}"
-                                >
-                                <option [defaultSelected]="true" [value]="editData.taxMonth?.month"> {{editData.taxMonth?.month}} </option>
-                                <option *ngFor="let x of formData.listMonth"> Total for {{ x }} </option>
-                                </select>
-                                <span class="invalid-feedback"> 
-                                    <span *ngIf="m.get('selectMonth')?.errors?.required"> Please enter the tax Month </span>
-                                </span>
-                            </div>
-                        </div>
+                    <p class="h6">SELECT MONTH</p>
+                    <div class="col">
+                        <select 
+                        class="form-select form-select-lg" 
+                        formControlName="selectMonth"
+                        [ngClass]="{'is-invalid': (clientForm.get('selectMonth')!.touched || clientForm.get('selectMonth')!.dirty) && !clientForm.get('selectMonth')!.valid}"
+                        >
+                        <option [defaultSelected]="true" [value]="editData.taxMonth?.month"> {{editData.taxMonth?.month}} </option>
+                        <option *ngFor="let x of formData.listMonth"> Total for {{ x }} </option>
+                        </select>
+                        <span class="invalid-feedback"> 
+                            <span *ngIf="clientForm.get('selectMonth')?.errors?.required"> Please enter the tax Month </span>
+                        </span>
                         <br/>
                     </div>
-                </div>
-                <div class="col" style="margin-top: 0.8cm;">
-                    <button [disabled]="!addedMonths.valid" class="btn btn-primary" (click)="duplicateFields2()">Select another Month</button>
                 </div>
             </div>
             <br/>
             <div class="row date" *ngIf="clientForm.get('selectOption')!.value.includes('Date')">
                 <div class="col">
-                    <div formArrayName="selectDate" *ngFor="let d of addedDate.controls; let i=index">
-                        <div [formGroupName]="i">
-                            <p class="h6">SELECT DATE </p>
-                            <div class="row">
-                                <div class="col">
-                                    <select 
-                                    class="form-select form-select-lg" 
-                                    formControlName="day"
-                                    [ngClass]="{'is-invalid': (d.get('day') || d.get('day')!.dirty) && !d.get('day')!.valid}"
-                                    >
-                                    <option [defaultSelected]="true" [value]="editData.taxDate?.day"> {{editData.taxDate?.day}} </option>
-                                    <option *ngFor="let x of formData.daylist"> {{ x }} </option>
-                                    </select>
-                                    <span class="invalid-feedback"> 
-                                        <span *ngIf="d.get('day')?.errors?.required"> Please enter the day </span>
-                                    </span>
-                                </div>
-                                <div class="col">
-                                    <select 
-                                    class="form-select form-select-lg" 
-                                    formControlName="month"
-                                    [ngClass]="{'is-invalid': (d.get('month') || d.get('month')!.dirty) && !d.get('month')!.valid}"
-                                    >
-                                    <option [defaultSelected]="true" [value]="editData.taxDate?.month"> {{editData.taxDate?.month}} </option>
-                                    <option *ngFor="let x of formData.months"> {{ x }} </option>
-                                    </select>
-                                    <span class="invalid-feedback"> 
-                                        <span *ngIf="d.get('month')?.errors?.required"> Please enter the month </span>
-                                    </span>
-                                </div>
-                                <div class="col">
-                                    <select 
-                                    class="form-select form-select-lg" 
-                                    formControlName="year"
-                                    [ngClass]="{'is-invalid': (d.get('year') || d.get('year')!.dirty) && !d.get('year')!.valid}"
-                                    >
-                                    <option [defaultSelected]="true" [value]="editData.taxDate?.year"> {{editData.taxDate?.year}} </option>
-                                    <option *ngFor="let x of formData.years"> 20{{ x }} </option>
-                                    </select>
-                                    <span class="invalid-feedback"> 
-                                        <span *ngIf="d.get('year')?.errors?.required"> Please enter the year </span>
-                                    </span>
-                                </div>
-                            </div>
+                    <p class="h6">SELECT DATE </p>
+                    <div class="row">
+                        <div class="col">
+                            Year
+                            <select 
+                            class="form-select form-select-lg" 
+                            formControlName="year"
+                            (change)="getNumberOfDays()"
+                            [ngClass]="{'is-invalid': (clientForm.get('year')!.touched || clientForm.get('year')!.dirty) && !clientForm.get('year')!.valid}"
+                            >
+                            <option [defaultSelected]="true" [value]="editData.taxDate?.year"> {{editData.taxDate?.year}} </option>
+                            <option *ngFor="let x of formData.years"> 20{{ x }} </option>
+                            </select>
+                            <span class="invalid-feedback"> 
+                                <span *ngIf="clientForm.get('year')?.errors?.required"> Please enter the year </span>
+                            </span>
+                        </div>
+                        <div class="col">
+                            Month
+                            <select 
+                            class="form-select form-select-lg" 
+                            formControlName="month"
+                            (change)="getNumberOfDays()"
+                            [ngClass]="{'is-invalid': (clientForm.get('month')!.touched || clientForm.get('month')!.dirty) && !clientForm.get('month')!.valid}"
+                            >
+                            <option [defaultSelected]="true" [value]="editData.taxDate?.month"> {{editData.taxDate?.month}} </option>
+                            <option *ngFor="let x of formData.months"> {{ x }} </option>
+                            </select>
+                            <span class="invalid-feedback"> 
+                                <span *ngIf="clientForm.get('month')?.errors?.required"> Please enter the month </span>
+                            </span>
+                        </div>
+                        <div class="col">
+                            Day
+                            <select 
+                            class="form-select form-select-lg" 
+                            formControlName="day"
+                            [ngClass]="{'is-invalid': (clientForm.get('day')!.touched || clientForm.get('day')!.dirty) && !clientForm.get('day')!.valid}"
+                            >
+                            <option [defaultSelected]="true" [value]="editData.taxDate?.day"> {{editData.taxDate?.day}} </option>
+                            <option *ngFor="let x of numberOfDays"> {{ x }} </option>
+                            </select>
+                            <span class="invalid-feedback"> 
+                                <span *ngIf="clientForm.get('day')?.errors?.required"> Please enter the day </span>
+                            </span>
                         </div>
                         <br/>
                     </div>
                 </div>
-                <div class="col" style="margin-top: 0.8cm;">
-                    <button [disabled]="!addedDate.valid" class="btn btn-primary" (click)="duplicateFields3()">Add another Date</button>
-                </div>
             </div>
-            <button class="btn btn-primary" [disabled]="clientForm.untouched" (click)="editData.id > 0 ? addEditRecord(editData.id.toString()) : addNewRecord()"> {{ editData.id > 0 ? 'Update Record' : 'Add New Record' }} </button>
+            <br/>
+            <button class="btn btn-primary" type="submit" [disabled]="clientForm.invalid"> {{ btnLabel }} </button>
             </form>
         </div>
     </div>
