--- a/src/app/salary/salary-list/salary-list.component.html
+++ b/src/app/salary/salary-list/salary-list.component.html
@@ -16,7 +16,18 @@
                         <th>Date</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody *ngIf="default">
+                    <tr *ngFor="let d of data.getTestData(123)" (click)="showDetail(d.id)">
+                        <td></td>
+                        <td> {{d.id}} </td>
+                        <td> {{d.companyName}} </td>
+                        <td> {{d.amount | currency: d.currency: 'symbol-narrow': '1.2-2'}} </td>
+                        <td> {{d.currency}} </td>
+                        <td> {{d.exactPeriod}} </td>
+                        <td> {{d | datePipe}} </td>
+                    </tr> 
+                </tbody>
+                <tbody *ngIf="!default">
                     <tr *ngFor="let d of results" (click)="showDetail(d.id)">
                         <td></td>
                         <td> {{d.id}} </td>
@@ -26,7 +37,7 @@
                         <td> {{d.exactPeriod}} </td>
                         <td> {{d | datePipe}} </td>
                     </tr> 
-                </tbody>   
+                </tbody>      
             </table>
             <app-salary-detail *ngIf="show" 
                                 [salary]="salary"
